--- a/MyFinance/main/templates/html/home.html
+++ b/MyFinance/main/templates/html/home.html
@@ -6,8 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="h1">Teste</div>
-    <div class="p"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam laudantium libero perferendis laboriosam optio asperiores!
-    </div>
+    <h1>Teste</h1>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam laudantium libero perferendis laboriosam optio asperiores!</p>
 </body>
 </html>
